# code

./: .gitignore  Dockerfile  MOTOR_FIX_SUMMARY.md  cj.md  diagnose_motors.sh  fix_usb.sh  test_motors.sh
.script/: build-rmcs  sync-remote
.ssh/: config
rmcs_ws/: run_test_simple.sh
rmcs_ws/src/rmcs_bringup/config/: Test.yaml
rmcs_ws/src/rmcs_bringup/launch/: rmcs.launch.py
rmcs_ws/src/rmcs_bringup/scripts/: run_test.sh
rmcs_ws/src/rmcs_core/: CMakeLists.txt  plugins.xml
rmcs_ws/src/rmcs_core/src/broadcaster/: dummy_remote.cpp
rmcs_ws/src/rmcs_core/src/controller/chassis/: simple_chassis_commander.cpp  simple_power_provider.cpp  steering_wheel_controller.cpp  vesc_steering_wheel_controller.cpp  vesc_t_3_steering_wheel_controller.cpp  vesc_t_4_steering_wheel_controller.cpp
rmcs_ws/src/rmcs_core/src/controller/gimbal/: mcontrol.cpp
rmcs_ws/src/rmcs_core/src/controller/pid/: matrix_pid_calculator.hpp
rmcs_ws/src/rmcs_core/src/filter/: low_pass_filter.hpp
rmcs_ws/src/rmcs_core/src/hardware/: Test.cpp  steering-infantry.cpp
rmcs_ws/src/rmcs_core/src/hardware/device/: dji_motor.hpp  go1_motor.hpp  lk_motor.hpp  sbus_motor_ctrl.hpp  vesc.hpp  vesc_motor.hpp
rmcs_ws/src/rmcs_executor/include/rmcs_executor/: component.hpp
